Adapted up to section 04

--- a/01-How-to-Run-Python-Code.ipynb
+++ b/01-How-to-Run-Python-Code.ipynb
@@ -138,7 +138,7 @@
     "- **Tarea**: \n",
     "    - Utilizar un editor de textos sencillo para escribir un script similar al anterior. \n",
     "    - Abrir una *shell* y ejecutar el *script*\n",
-    "    - Localizar e instalar un editor que sea adecuado para edición de código Python. Por ejemplo, [Spyder](https://www.spyder-ide.org/) ofrece, además de un editor especializado, una interfaz similar a la de Matlab/Octave.\n",
+    "    - Localizar e instalar un editor que sea adecuado para edición de código Python. Por ejemplo, [Spyder](https://www.spyder-ide.org/) ofrece, además de un editor[especializado, una interfaz similar a la de Matlab/Octave. Existen otros editores, como [Emacs](https://www.emacswiki.org/emacs/PythonProgrammingInEmacs) (editor de gran calidad pero de uso más complejo, inicialmente), recomendables.\n",
     "\n",
     "---"
    ]
