--- a/02-Basic-Python-Syntax.ipynb
+++ b/02-Basic-Python-Syntax.ipynb
@@ -33,13 +33,13 @@
    "metadata": {},
    "source": [
     "Python was originally developed as a teaching language, but its ease of use and clean syntax have led it to be embraced by beginners and experts alike.\n",
-    "The cleanliness of Python's syntax has led some to call it \"executable pseudocode\", and indeed my own experience has been that it is often much easier to read and understand a Python script than to read a similar script written in, say, C.\n",
+    "The cleanliness of Python's syntax has led some to call it \"executable pseudocode\", and indeed my own experience has been that it is often **much easier to read and understand** a Python script than to read a similar script written in, say, C.\n",
     "Here we'll begin to discuss the main features of Python's syntax.\n",
     "\n",
-    "Syntax refers to the structure of the language (i.e., what constitutes a correctly-formed program).\n",
-    "For the time being, we'll not focus on the semantics – the meaning of the words and symbols within the syntax – but will return to this at a later point.\n",
+    "*Syntax* refers to the structure of the language (i.e., what constitutes a correctly-formed program).\n",
+    "For the time being, we'll not focus on the *semantics* – the meaning of the words and symbols within the syntax – but will return to this at a later point.\n",
     "\n",
-    "Consider the following code example:"
+    "Consider the following **code example**:"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "Notice that the end of this statement is simply marked by the end of the line.\n",
     "This is in contrast to languages like C and C++, where every statement must end with a semicolon (``;``).\n",
     "\n",
-    "In Python, if you'd like a statement to continue to the next line, it is possible to use the \"``\\``\" marker to indicate this:"
+    "In Python, if you'd like a statement to **continue to the next line**, it is possible to use the \"``\\``\" marker to indicate this:"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is also possible to continue expressions on the next line within parentheses, without using the \"``\\``\" marker:"
+    "It is also possible to continue expressions on the next line **within parentheses**, without using the \"``\\``\" marker:"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "    # indentation indicates code block\n",
     "    total += i\n",
     "```\n",
-    "In Python, indented code blocks are always preceded by a colon (``:``) on the previous line."
+    "In Python, indented code blocks are always **preceded by a colon** (``:``) on the previous line."
    ]
   },
   {
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python's use of meaningful whitespace often is surprising to programmers who are accustomed to other languages, but in practice it can lead to much more consistent and readable code than languages that do not enforce indentation of code blocks.\n",
+    "Python's use of meaningful whitespace often is surprising to programmers who are accustomed to other languages, but in practice it can lead to much more **consistent and readable code** than languages that do not enforce indentation of code blocks.\n",
     "If you find Python's use of whitespace disagreeable, I'd encourage you to give it a try: as I did, you may find that you come to appreciate it.\n",
     "\n",
     "Finally, you should be aware that the *amount* of whitespace used for indenting code blocks is up to the user, as long as it is consistent throughout the script.\n",
@@ -265,7 +265,7 @@
     "x = 10 ** -2\n",
     "```\n",
     "I find the second version with spaces much more easily readable at a single glance.\n",
-    "Most Python style guides recommend using a single space around binary operators, and no space around unary operators.\n",
+    "Most Python style guides recommend using a *single space around binary* operators, and *no space around unary operators*.\n",
     "We'll discuss Python's operators further in [Basic Python Semantics: Operators](04-Semantics-Operators.ipynb)."
    ]
   },
@@ -383,7 +383,7 @@
     "## Aside: A Note on the ``print()`` Function\n",
     "\n",
     "Above we used the example of the ``print()`` function.\n",
-    "The ``print()`` function is one piece that has changed between Python *2.x* and Python *3.x*. In Python 2, ``print`` behaved as a statement: that is, you could write\n",
+    "The ``print()`` function is one piece that has **changed between Python *2.x* and Python *3.x***. In Python 2, ``print`` behaved as a statement: that is, you could write\n",
     "``` python\n",
     "# Python 2 only!\n",
     ">> print \"first value:\", 1\n",
