--- a/04-Semantics-Operators.ipynb
+++ b/04-Semantics-Operators.ipynb
@@ -254,7 +254,12 @@
    "metadata": {},
    "source": [
     "These bitwise operators are not as immediately useful as the standard arithmetic operators, but it's helpful to see them at least once to understand what class of operation they perform.\n",
-    "In particular, users from other languages are sometimes tempted to use XOR (i.e., ``a ^ b``) when they really mean exponentiation (i.e., ``a ** b``)."
+    "In particular, users from other languages are sometimes tempted to use XOR (i.e., ``a ^ b``) when they really mean exponentiation (i.e., ``a ** b``).\n",
+    "\n",
+    "---\n",
+    "- **¡Atención!** La exponenciación puede ser una fuente de ¡errores muy difícil de detectar:\n",
+    "\n",
+    "- ¿Cúal es el resultado de `2^3`?"
    ]
   },
   {
@@ -350,7 +355,7 @@
     "|<code>a &#124;= b</code>| ``a ^= b``|``a <<= b``| ``a >>= b``|\n",
     "\n",
     "Each one is equivalent to the corresponding operation followed by assignment: that is, for any operator \"``■``\", the expression ``a ■= b`` is equivalent to ``a = a ■ b``, with a slight catch.\n",
-    "For mutable objects like lists, arrays, or DataFrames, these augmented assignment operations are actually subtly different than their more verbose counterparts: they modify the contents of the original object rather than creating a new object to store the result."
+    "For **mutable objects** like lists, arrays, or DataFrames, these augmented assignment operations are actually subtly different than their more verbose counterparts: they modify the contents of the original object rather than creating a new object to store the result."
    ]
   },
   {
@@ -360,14 +365,14 @@
     "## Comparison Operations\n",
     "\n",
     "Another type of operation which can be very useful is comparison of different values.\n",
-    "For this, Python implements standard comparison operators, which return Boolean values ``True`` and ``False``.\n",
+    "For this, Python implements standard comparison operators, which return **Boolean values** ``True`` and ``False``.\n",
     "The comparison operations are listed in the following table:\n",
     "\n",
-    "| Operation     | Description                       || Operation     | Description                          |\n",
-    "|---------------|-----------------------------------||---------------|--------------------------------------|\n",
-    "| ``a == b``    | ``a`` equal to ``b``              || ``a != b``    | ``a`` not equal to ``b``             |\n",
-    "| ``a < b``     | ``a`` less than ``b``             || ``a > b``     | ``a`` greater than ``b``             |\n",
-    "| ``a <= b``    | ``a`` less than or equal to ``b`` || ``a >= b``    | ``a`` greater than or equal to ``b`` |\n",
+    "| Operation     | Description                       | Operation     | Description                          |\n",
+    "|---------------|-----------------------------------|---------------|--------------------------------------|\n",
+    "| ``a == b``    | ``a`` equal to ``b``              | ``a != b``    | ``a`` not equal to ``b``             |\n",
+    "| ``a < b``     | ``a`` less than ``b``             | ``a > b``     | ``a`` greater than ``b``             |\n",
+    "| ``a <= b``    | ``a`` less than or equal to ``b`` | ``a >= b``    | ``a`` greater than or equal to ``b`` |\n",
     "\n",
     "These comparison operators can be combined with the arithmetic and bitwise operators to express a virtually limitless range of tests for the numbers.\n",
     "For example, we can check if a number is odd by checking that the modulus with 2 returns 1:"
@@ -719,7 +724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The difference between the two cases here is that in the first, ``a`` and ``b`` point to *different objects*, while in the second they point to the *same object*.\n",
+    "The difference between the two cases here is that in the first, ``a`` and ``b`` point to *different objects*, while in the second they **point to the *same object***.\n",
     "As we saw in the previous section, Python variables are pointers. The \"``is``\" operator checks whether the two variables are pointing to the same container (object), rather than referring to what the container contains.\n",
     "With this in mind, in most cases that a beginner is tempted to use \"``is``\" what they really mean is ``==``."
    ]
