--- a/03-Semantics-Variables.ipynb
+++ b/03-Semantics-Variables.ipynb
@@ -63,7 +63,7 @@
     "```\n",
     "\n",
     "you are essentially defining a \"memory bucket\" named ``x``, and putting the value ``4`` into it.\n",
-    "In Python, by contrast, variables are best thought of not as containers but as pointers.\n",
+    "In Python, by contrast, variables are best thought of **not as *containers* but as *pointers***.\n",
     "So in Python, when you write\n",
     "\n",
     "```python\n",
@@ -100,7 +100,7 @@
     "this dynamic typing is one of the pieces that makes Python so quick to write and easy to read.\n",
     "\n",
     "There is a consequence of this \"variable as pointer\" approach that you need to be aware of.\n",
-    "If we have two variable names pointing to the same *mutable* object, then changing one will change the other as well!\n",
+    "If we have two variable names pointing to the same *mutable* object, then **changing one will change the other as well**!\n",
     "For example, let's create and modify a list:"
    ]
   },
@@ -191,7 +191,7 @@
    "source": [
     "Again, this makes perfect sense if you think of ``x`` and ``y`` as pointers, and the \"``=``\" operator as an operation that changes what the name points to.\n",
     "\n",
-    "You might wonder whether this pointer idea makes arithmetic operations in Python difficult to track, but Python is set up so that this is not an issue. Numbers, strings, and other *simple types* are immutable: you can't change their value – you can only change what values the variables point to.\n",
+    "You might wonder whether this pointer idea makes arithmetic operations in Python difficult to track, but Python is set up so that this is not an issue. **Numbers, strings, and other *simple types* are immutable**: you can't change their value – you can only change what values the variables point to.\n",
     "So, for example, it's perfectly safe to do operations like the following:"
    ]
   },
@@ -305,9 +305,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python has types; however, the types are linked not to the variable names but *to the objects themselves*.\n",
+    "Python has types; however, the **types are linked** not to the variable names but * **to the objects** themselves*.\n",
     "\n",
-    "In object-oriented programming languages like Python, an *object* is an entity that contains data along with associated metadata and/or functionality.\n",
+    "In object-oriented programming languages like Python, **an *object*** is an entity that **contains data** along with associated metadata and/or **functionality**.\n",
     "In Python everything is an object, which means every entity has some metadata (called *attributes*) and associated functionality (called *methods*).\n",
     "These attributes and methods are accessed via the dot syntax.\n",
     "\n",
@@ -441,6 +441,16 @@
    "metadata": {},
    "source": [
     "We'll find that the everything-is-object design choice of Python allows for some very convenient language constructs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Quiz: https://play.kahoot.it/#/k/e130df2f-a60f-42ba-90f1-8a6449d6dcd9\n",
+    "\n",
+    "---"
    ]
   },
   {
