Adapted up to section 06

--- a/00-Introduction.ipynb
+++ b/00-Introduction.ipynb
@@ -51,7 +51,7 @@
     "This report seeks to fill that niche.\n",
     "\n",
     "---\n",
-    "- Encuesta para estudiantes:\n",
+    "- **Encuesta**:\n",
     "    - ¿Qué conocimientos previos tienes en Python, de 0 a 5?\n",
     "    - ¿Qué conocimientos previos tienes en otros lenguajes, de 0 a 5?\n",
     "        - C, C++\n",
