--- a/05-Built-in-Scalar-Types.ipynb
+++ b/05-Built-in-Scalar-Types.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "Python's simple types are summarized in the following table:\n",
     "\n",
-    "<center>**Python Scalar Types**</center>\n",
+    "\n",
+    "&nbsp;<center><b>Python Scalar Types</b></center>\n",
     "\n",
     "| Type        | Example        | Description                                                  |\n",
     "|-------------|----------------|--------------------------------------------------------------|\n",
@@ -86,7 +87,7 @@
    "source": [
     "Python integers are actually quite a bit more sophisticated than integers in languages like ``C``.\n",
     "C integers are fixed-precision, and usually overflow at some value (often near $2^{31}$ or $2^{63}$, depending on your system).\n",
-    "Python integers are variable-precision, so you can do computations that would overflow in other languages:"
+    "**Python integers are variable-precision**, so you can do computations that would overflow in other languages:"
    ]
   },
   {
@@ -140,11 +141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this upcasting is a feature of Python 3; in Python 2, like in many statically-typed languages such as C, integer division truncates any decimal and always returns an integer:\n",
+    "Note that this upcasting is a feature of Python 3; in **Python 2**, like in many statically-typed languages such as C, **integer division truncates any decimal** and always returns an integer:\n",
     "``` python\n",
     "# Python 2 behavior\n",
     ">>> 5 / 2\n",
     "2\n",
+    ">>> 1 / 2\n",
+    "0\n",
     "```\n",
     "To recover this behavior in Python 3, you can use the floor-division operator:"
    ]
@@ -262,7 +265,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On the other hand, floating-point numbers can be truncated to integer. Note that it differs from floor and ceiling functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(-0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(-1.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Aside: Floating-point precision\n",
+    "\n",
+    "---\n",
+    "- **Nota**: Aunque este punto es interesante, no es específico de Python: ocurre en cualquier lenguaje de programación. No se puede confiar igualdad entre números en coma flotante. Para dos números en coma flotante $x,y$, vez de $x=y$ es más conveniente usar comparaciones del tipo $|x -y|<10^{-15}$ (`abs(x-y)<1.e-15`).\n",
+    "---\n",
+    "\n",
     "One thing to be aware of with floating point arithmetic is that its precision is limited, which can cause equality tests to be unstable. For example:"
    ]
   },
@@ -349,7 +424,7 @@
     "Python internally truncates these representations at 52 bits beyond the first nonzero bit on most systems.\n",
     "\n",
     "This rounding error for floating-point values is a necessary evil of working with floating-point numbers.\n",
-    "The best way to deal with it is to always keep in mind that floating-point arithmetic is approximate, and *never* rely on exact equality tests with floating-point values."
+    "The best way to deal with it is to always keep in mind that floating-point arithmetic is approximate, and ***never* rely on exact equality tests with floating-point** values."
    ]
   },
   {
@@ -509,7 +584,7 @@
    "metadata": {},
    "source": [
     "## String Type\n",
-    "Strings in Python are created with single or double quotes:"
+    "Strings in Python are created with **single or double quotes**:"
    ]
   },
   {
@@ -659,7 +734,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more discussion of indexing in Python, see [\"Lists\"](06-Built-in-Data-Structures.ipynb#Lists)."
+    "For more discussion of indexing in Python, see [\"Lists\"](06-Built-in-Data-Structures.ipynb#Lists).\n",
+    "\n",
+    "---\n",
+    "- Y para conocer el origen del término *spam* véase por ejemplo [este enlace](https://www.reasonwhy.es/actualidad/digital/los-monty-python-y-el-origen-de-la-palabra-spam_2013-11-25). Por cierto, el nombre del lenguaje proviene del grupo de Humoristas *Monty Python* ;-)\n",
+    "---"
    ]
   },
   {
@@ -737,6 +816,17 @@
    "metadata": {},
    "source": [
     "Likewise, any function in Python with no return value is, in reality, returning ``None``."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- *Nota*: exiten usos interesantes de ``None``, por ejemplo una función que implemente un método numérico para calcular la raíz de una ecuación $f(x)=0$ podría devolver:f\n",
+    "    - La raíz, $x$, si el método converge para la función $f$\n",
+    "    - ``None`` si el método no converge para $f$\n",
+    "---"
    ]
   },
   {
