--- a/06-Built-in-Data-Structures.ipynb
+++ b/06-Built-in-Data-Structures.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python uses *zero-based* indexing, so we can access the first and second element in using the following syntax:"
+    "Python uses *zero-based* **indexing**, so we can access the first and second element in using the following syntax:"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where *indexing* is a means of fetching a single value from the list, *slicing* is a means of accessing multiple values in sub-lists.\n",
+    "Where *indexing* is a means of fetching a single value from the list, ***slicing*** is a means of accessing multiple values in sub-lists.\n",
     "It uses a colon to indicate the start point (inclusive) and end point (non-inclusive) of the sub-array.\n",
     "For example, to get the first three elements of the list, we can write:"
    ]
@@ -359,6 +359,17 @@
    "metadata": {},
    "source": [
     "Notice where ``0`` and ``3`` lie in the preceding diagram, and how the slice takes just the values between the indices.\n",
+    "\n",
+    "---\n",
+    "- **Nota**: \n",
+    "    - Me gusta enfatizar lo anterior en términos matemáticos. Cuando indicamos el rango de índices ``0:3`` estamos hablando de un intervalo de números enteros cerrado a la izquierda y abierto a la derecha. Es decir, Python usa la notación ``0:3``$=[0,3) \\cap \\mathbb{Z}$. En general, dados $m,n\\in\\mathbb{Z}$,\n",
+    "$$\n",
+    "\\texttt{m:n} = [m,n) \\cap \\mathbb{Z}\n",
+    "$$\n",
+    "    - Esta elección de intervalo abierto/cerrado tiene algunas ventajas. Por ejemplo, la notación ``:n`` y la función ``range(n)``, que veremos más adelante, producirán un conjunto de exactamente $n$ índices, $0,1,...,n-1$.\n",
+    "\n",
+    "---\n",
+    "\n",
     "If we leave out the first index, ``0`` is assumed, so we can equivalently write:"
    ]
   },
@@ -414,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, it is possible to specify a third integer that represents the step size; for example, to select every second element of the list, we can write:"
+    "Finally, it is possible to specify a third integer that represents the **step size**; for example, to select every second element of the list, we can write:"
    ]
   },
   {
@@ -610,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main distinguishing feature of tuples is that they are *immutable*: this means that once they are created, their size and contents cannot be changed:"
+    "The main distinguishing feature of tuples is that they are ***immutable*** this means that once they are created, their size and contents cannot be changed:"
    ]
   },
   {
@@ -659,7 +670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tuples are often used in a Python program; a particularly common case is in functions that have multiple return values.\n",
+    "Tuples are often used in a Python program; a particularly common case is in functions that have **multiple return values**.\n",
     "For example, the ``as_integer_ratio()`` method of floating-point objects returns a numerator and a denominator; this dual return value comes in the form of a tuple:"
    ]
   },
@@ -794,7 +805,7 @@
    "metadata": {},
    "source": [
     "Keep in mind that dictionaries do not maintain any sense of order for the input parameters; this is by design.\n",
-    "This lack of ordering allows dictionaries to be implemented very efficiently, so that random element access is very fast, regardless of the size of the dictionary (if you're curious how this works, read about the concept of a *hash table*).\n",
+    "This lack of ordering allows dictionaries to be implemented very efficiently, so that **random element access is very fast**, regardless of the size of the dictionary (if you're curious how this works, read about the concept of a *hash table*).\n",
     "The [python documentation](https://docs.python.org/3/library/stdtypes.html) has a complete list of the methods available for dictionaries."
    ]
   },
