Adapted up to section 08

--- a/07-Control-Flow-Statements.ipynb
+++ b/07-Control-Flow-Statements.ipynb
@@ -145,6 +145,10 @@
    "metadata": {},
    "source": [
     "Note that the range starts at zero by default, and that by convention the top of the range is not included in the output.\n",
+    "\n",
+    "---\n",
+    "- **Nota**: obsérvese que ``range(n)``$=[0,n)\\cap\\mathbb{Z}$ y en general ``range(m,n)``$=[m,n)\\cap\\mathbb{Z}$\n",
+    "---\n",
     "Range objects can also have more complicated values:"
    ]
   },
