--- a/08-Defining-Functions.ipynb
+++ b/08-Defining-Functions.ipynb
@@ -67,9 +67,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here ``print`` is the function name, and ``'abc'`` is the function's *argument*.\n",
+    "Here ``print`` is the function name, and ``'abc'`` is the function's ***argument***.\n",
     "\n",
-    "In addition to arguments, there are *keyword arguments* that are specified by name.\n",
+    "In addition to arguments, there are ***keyword arguments*** that are specified by name.\n",
     "One available keyword argument for the ``print()`` function (in Python 3) is ``sep``, which tells what character or characters should be used to separate multiple items:"
    ]
   },
@@ -173,7 +173,7 @@
     "If you're familiar with strongly-typed languages like ``C``, you'll immediately notice that there is no type information associated with the function inputs or outputs.\n",
     "Python functions can return any Python object, simple or compound, which means constructs that may be difficult in other languages are straightforward in Python.\n",
     "\n",
-    "For example, multiple return values are simply put in a tuple, which is indicated by commas:"
+    "For example, **multiple return** values are simply put in a tuple, which is indicated by commas:"
    ]
   },
   {
@@ -550,6 +550,31 @@
    "metadata": {},
    "source": [
     "While these key functions could certainly be created by the normal, ``def`` syntax, the ``lambda`` syntax is convenient for such short one-off functions like these."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "- **Nota**: Otro ejemplo \"más matemático\". Vamos a definir una lista de funciones, y calcular (aproximadamente, con la función ``quad`` contenida en el paquete ``scipy.integrate``) sus integrales definidas en $[0,1]$\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# La función quad aplica una forma de cuadratura parta integrar\n",
+    "# numéricamente un función f en un intervalo [a,b]\n",
+    "from scipy.integrate import quad\n",
+    "\n",
+    "lista_f = (lambda x:x+1, lambda x:x**2+1, lambda x: x**3+1 )\n",
+    "for f in lista_f:\n",
+    "    integral, error = quad(f, a=0, b=1)\n",
+    "    print(integral)"
    ]
   },
   {
