Adapted up to section 10

--- a/10-Iterators.ipynb
+++ b/10-Iterators.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Often an important piece of data analysis is repeating a similar calculation, over and over, in an automated fashion.\n",
+    "Often an important piece of data analysis is **repeating a similar calculation**, over and over, in an automated fashion.\n",
     "For example, you may have a table of a names that you'd like to split into first and last, or perhaps of dates that you'd like to convert to some standard format.\n",
     "One of Python's answers to this is the *iterator* syntax.\n",
     "We've seen this already with the ``range`` iterator:"
@@ -99,7 +99,7 @@
     "The fact that the syntax of the code is so close to its English description (\"*for [each] value in [the] list*\") is just one of the syntactic choices that makes Python such an intuitive language to learn and use.\n",
     "\n",
     "But the face-value behavior is not what's *really* happening.\n",
-    "When you write something like \"``for val in L``\", the Python interpreter checks whether it has an *iterator* interface, which you can check yourself with the built-in ``iter`` function:"
+    "When you write something like \"``for val in L``\", the **Python interpreter checks whether it has an *iterator* interface**, which you can check yourself with the built-in ``iter`` function:"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "metadata": {},
    "source": [
     "What is the purpose of this level of indirection?\n",
-    "Well, it turns out this is incredibly useful, because it allows Python to treat things as lists that are *not actually lists*."
+    "Well, it turns out this is incredibly useful, because it **allows Python to treat things as lists that are *not actually lists***."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The benefit of the iterator indirection is that *the full list is never explicitly created!*\n",
+    "**The benefit of the iterator indirection is that *the full list is never explicitly created!***\n",
     "We can see this by doing a range calculation that would overwhelm our system memory if we actually instantiated it (note that in Python 2, ``range`` creates a list, so running the following will not lead to good things!):"
    ]
   },
@@ -532,7 +532,7 @@
    "source": [
     "### Iterators as function arguments\n",
     "\n",
-    "We saw in [``*args`` and ``**kwargs``: Flexible Arguments](#*args-and-**kwargs:-Flexible-Arguments). that ``*args`` and ``**kwargs`` can be used to pass sequences and dictionaries to functions.\n",
+    "We saw in [``*args`` and ``**kwargs``: Flexible Arguments](08-Defining-Functions.ipynb). that ``*args`` and ``**kwargs`` can be used to pass sequences and dictionaries to functions.\n",
     "It turns out that the ``*args`` syntax works not just with sequences, but with any iterator:"
    ]
   },
