Updated up to section 12, Generators

--- a/10-Iterators.ipynb
+++ b/10-Iterators.ipynb
@@ -530,6 +530,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "- **Nota**: Un [cuestionario sobre el tema en Kahoot](https://play.kahoot.it/#/k/d144fddb-9bc3-46c4-a883-7d937507e877)\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Iterators as function arguments\n",
     "\n",
     "We saw in [``*args`` and ``**kwargs``: Flexible Arguments](08-Defining-Functions.ipynb). that ``*args`` and ``**kwargs`` can be used to pass sequences and dictionaries to functions.\n",
