--- a/11-List-Comprehensions.ipynb
+++ b/11-List-Comprehensions.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "## Basic List Comprehensions\n",
-    "List comprehensions are simply a way to compress a list-building for-loop into a single short, readable line.\n",
+    "List comprehensions are simply **a way to compress a list-building for-loop** into a single short, readable line.\n",
     "For example, here is a loop that constructs a list of the first 12 square integers:"
    ]
   },
@@ -127,6 +127,13 @@
    "metadata": {},
    "source": [
     "As with many Python statements, you can almost read-off the meaning of this statement in plain English: \"construct a list consisting of the square of ``n`` for each ``n`` up to 12\".\n",
+    "\n",
+    "---\n",
+    "- **Nota**: En matemáticas, me gusta comparar las \"*list comprehesions*\" con definición de conjuntos *por comprensión*:\n",
+    "\n",
+    "$$\n",
+    "A = \\{ n^2 \\ :\\ n=0,...,11 \\}\n",
+    "$$\n",
     "\n",
     "This basic syntax, then, is ``[``*``expr``* ``for`` *``var``* ``in`` *``iterable``*``]``, where *``expr``* is any valid expression, *``var``* is a variable name, and *``iterable``* is any iterable Python object."
    ]
@@ -306,7 +313,7 @@
    "source": [
     "Once you understand the dynamics of list comprehensions, it's straightforward to move on to other types of comprehensions. The syntax is largely the same; the only difference is the type of bracket you use.\n",
     "\n",
-    "For example, with curly braces you can create a ``set`` with a *set comprehension*:"
+    "For example, with curly braces you can create a ``set`` with a **set comprehension**:"
    ]
   },
   {
@@ -361,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a slight tweak, you can add a colon (``:``) to create a *dict comprehension*:"
+    "With a slight tweak, you can add a colon (``:``) to create a **dict comprehension**:"
    ]
   },
   {
@@ -388,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, if you use parentheses rather than square brackets, you get what's called a *generator expression*:"
+    "Finally, if you use parentheses rather than square brackets, you get what's called a **generator expression**:"
    ]
   },
   {
