--- a/12-Generators.ipynb
+++ b/12-Generators.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "The difference is that a generator expression does not actually compute the values until they are needed.\n",
     "This not only leads to memory efficiency, but to computational efficiency as well!\n",
-    "This also means that while the size of a list is limited by available memory, the size of a generator expression is unlimited!\n",
+    "This also means that while the size of a list is limited by available memory, **the size of a generator expression is unlimited**!\n",
     "\n",
     "An example of an infinite generator expression can be created using the ``count`` iterator defined in ``itertools``:"
    ]
