Espirolaterales con ipywidgets

--- a/18-Orientacion-a-Objetos.ipynb
+++ b/18-Orientacion-a-Objetos.ipynb
@@ -666,6 +666,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "696ffb294d8a4342b195aa82f13e1018",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(BoundedIntText(value=170, description='grados', max=360, step=5), BoundedIntText(value=4…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update>"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def update(grados, máximo=10,color=\"organe\"):\n",
+    "    \"Función a la que llamará `interact`\"\n",
+    "    radianes = grados*pi/180\n",
+    "    espiro(ángulo=radianes, máximo=máximo, color=color)\n",
+    "\n",
+    "interact(update, \n",
+    "         grados = BoundedIntText(min=0,max=360,value=170,step=5),\n",
+    "         máximo = BoundedIntText(min=0,max=60, value=40),\n",
+    "         color = [\"orange\",\"green\",\"blue\",\"cyan\"] )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
