Información de (no) visualización de widgets desde Jupyter

--- a/18-Orientacion-a-Objetos.ipynb
+++ b/18-Orientacion-a-Objetos.ipynb
@@ -619,7 +619,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Podemos usar `ipywidgets` para interaccionar con la tortuga "
+    "### Podemos usar `ipywidgets` para interaccionar con la tortuga \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Atención**: esta sección debe ejecutarse en un *notebook* local, pues no es posible intereaccionar con los *widgets* de Ipython (deslizadores, selectores de valores, etc) a través de internet.\n",
+    "\n",
+    "Para interaccionar con los *widgets*, se puede [descargar de internet](https://nbviewer.jupyter.org) el *notebook* (a un fichero ``.ipynb`` local) y luego abrirlo con *Jupyter*. También se pueden [descargar todos los *notebooks* desde Github](https://github.com/rrgalvan/IntroPythonMasterMatemat) (pulsar \"Clone or download\").\n",
+    "\n",
+    "---"
    ]
   },
   {
